fixed overlapping header/about

--- a/style.css
+++ b/style.css
@@ -8,10 +8,14 @@ header {
     position: fixed;
     margin: auto;
     width: 100%;
+    max-height: 50px;
 }
 nav {
     display: flex;
     justify-content: space-around;
+}
+#about {
+    padding-top: 50px;
 }
 #about img {
 max-height:500px;
